# irctk

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  example_irc_bot.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml
docs/: Makefile  channel.rst  client.rst  conf.py  index.rst  message.rst  nick.rst  numerics.rst  support.rst
irctk/: __init__.py  channel.py  client.py  command.py  irc.py  isupport.py  message.py  nick.py  numerics.py  routing.py
irctk/tests/: mock_client.py  test_channel.py  test_client.py  test_isupport.py  test_message.py  test_nick.py
tests/: mock_client.py  test_channel.py  test_client.py  test_command.py  test_isupport.py  test_message.py  test_nick.py  test_numerics.py
