[tool.poetry]
name = "irc-toolkit"
version = "0.3.0"
description = "A Python IRCv3 Client Library"
authors = ["Kyle Fuller <kyle@fuller.li>"]
license = "BSD"
readme = "README.md"
packages = [
    { include = "irctk" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-mypy = "^0.6.2"
pytest-cov = "^2.8.1"
